force-app/main/default/objects/Issue_Tracker__c/Issue_Tracker__c.object-meta.xml
<CustomObject>
    <description>This object is used for Copado Issues Tracking for Dev and DevOps</description>
    <label>Issue Tracker</label>
    <nameField>
        <displayFormat>IT-{000000}</displayFormat>
        <label>Issue Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issue Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>