force-app/main/default/objects/Issue_Tracker__c/fields/Best_Practice__c.field-meta.xml
<CustomField>
    <fullName>Best_Practice__c</fullName>
    <inlineHelpText>Please provide to the best practice recomendations</inlineHelpText>
    <label>Best Practice</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>