force-app/main/default/objects/Issue_Tracker__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <inlineHelpText>Please provide the category of the Issue.</inlineHelpText>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Code Override</fullName>
            </value>
            <value>
                <fullName>Commit Issue</fullName>
            </value>
            <value>
                <fullName>Merge Issue</fullName>
            </value>
            <value>
                <fullName>Developer Support</fullName>
            </value>
            <value>
                <fullName>Environment Issue</fullName>
            </value>
            <value>
                <fullName>Deployment Issue</fullName>
            </value>
            <value>
                <fullName>Tooling</fullName>
            </value>
            <value>
                <fullName>OmniStudio Issue</fullName>
            </value>
            <value>
                <fullName>User Setup</fullName>
            </value>
            <value>
                <fullName>User Creation</fullName>
            </value>
            <value>
                <fullName>Knowledge Issue</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>