force-app/main/default/objects/Issue_Tracker__c/fields/Developer__c.field-meta.xml
<CustomField>
    <fullName>Developer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please provide the Developer Name.</inlineHelpText>
    <label>Developer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Developer</relationshipName>
    <type>Lookup</type>
</CustomField>