force-app/main/default/objects/Issue_Tracker__c/fields/Developer_Escalated__c.field-meta.xml
<CustomField>
    <fullName>Developer_Escalated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Developer Escalated</label>
    <type>Checkbox</type>
</CustomField>