force-app/main/default/objects/Issue_Tracker__c/fields/DevOps_Engineer__c.field-meta.xml
<CustomField>
    <fullName>DevOps_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>DevOps Engineer worked on this issue</inlineHelpText>
    <label>DevOps Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Issue_Tracker</relationshipName>
    <type>Lookup</type>
</CustomField>