force-app/main/default/objects/Issue_Tracker__c/fields/Expected_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Expected_Resolution__c</fullName>
    <label>Expected Resolution</label>
    <type>DateTime</type>
</CustomField>