force-app/main/default/objects/Issue_Tracker__c/fields/Initial_Response_by__c.field-meta.xml
<CustomField>
    <fullName>Initial_Response_by__c</fullName>
    <label>Initial Response by</label>
    <type>DateTime</type>
</CustomField>