force-app/main/default/objects/Issue_Tracker__c/fields/Issue_Detail__c.field-meta.xml
<CustomField>
    <fullName>Issue_Detail__c</fullName>
    <inlineHelpText>Please provide the details of the issue and any references.</inlineHelpText>
    <label>Issue Detail</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>