force-app/main/default/objects/Issue_Tracker__c/fields/Issue_Environment__c.field-meta.xml
<CustomField>
    <fullName>Issue_Environment__c</fullName>
    <inlineHelpText>Please select the environment to which the issue is applicable.</inlineHelpText>
    <label>Issue Environment</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Environments</valueSetName>
    </valueSet>
</CustomField>