force-app/main/default/objects/Issue_Tracker__c/fields/JIRA_Key__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Key__c</fullName>
    <inlineHelpText>Please provide the JIRA Key associated to the defect/issue.</inlineHelpText>
    <label>JIRA Key</label>
    <length>10</length>
    <type>Text</type>
</CustomField>