force-app/main/default/objects/Issue_Tracker__c/fields/Other_Information__c.field-meta.xml
<CustomField>
    <fullName>Other_Information__c</fullName>
    <inlineHelpText>Please update this field id the category is set to other.</inlineHelpText>
    <label>Other Information</label>
    <type>TextArea</type>
</CustomField>