force-app/main/default/objects/Issue_Tracker__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please provide the release the issue is reported.</inlineHelpText>
    <label>Release</label>
    <referenceTo>copado__Release__c</referenceTo>
    <relationshipLabel>Issue Tracker</relationshipLabel>
    <relationshipName>Issue_Tracker</relationshipName>
    <type>Lookup</type>
</CustomField>