force-app/main/default/objects/Issue_Tracker__c/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <inlineHelpText>Please Provide the detail resolution steps for the issue.</inlineHelpText>
    <label>Resolution</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>