force-app/main/default/objects/Issue_Tracker__c/fields/Resolution_Time__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Time__c</fullName>
    <formula>CASE(Priority__c, &quot;P1&quot;,Expected_Resolution__c+(5/1440),&quot;P2&quot;,Expected_Resolution__c+(2/24),&quot;P3&quot;,Expected_Resolution__c+(3/24),&quot;P4&quot;,Expected_Resolution__c+(4/24),&quot;P5&quot;,Expected_Resolution__c+(6/24), DATETIMEVALUE( CreatedDate ) )</formula>
    <label>Resolution Time</label>
    <type>DateTime</type>
</CustomField>