force-app/main/default/objects/Issue_Tracker__c/fields/Root_Cause_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause_Analysis__c</fullName>
    <inlineHelpText>Please Provide the detail analysis of the Root Cause for the issue.</inlineHelpText>
    <label>Root Cause Analysis</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>