force-app/main/default/objects/Issue_Tracker__c/fields/Root_Cause_User_Story__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause_User_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Root Cause User Story</label>
    <referenceTo>copado__User_Story__c</referenceTo>
    <relationshipLabel>Issue Tracker (Root Cause User Story)</relationshipLabel>
    <relationshipName>Root_Cause_User_Story</relationshipName>
    <type>Lookup</type>
</CustomField>