force-app/main/default/objects/Issue_Tracker__c/fields/SLA_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>SLA_Start_Time__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA Start Time</label>
    <type>DateTime</type>
</CustomField>