force-app/main/default/objects/Issue_Tracker__c/fields/T1_Escalation__c.field-meta.xml
<CustomField>
    <fullName>T1_Escalation__c</fullName>
    <inlineHelpText>T1 Escalation if not resolved in time.</inlineHelpText>
    <label>T1  Escalation</label>
    <type>DateTime</type>
</CustomField>