force-app/main/default/objects/Issue_Tracker__c/fields/T2_Email__c.field-meta.xml
<CustomField>
    <fullName>T2_Email__c</fullName>
    <label>T2 Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>