force-app/main/default/objects/Issue_Tracker__c/fields/T3_Email__c.field-meta.xml
<CustomField>
    <fullName>T3_Email__c</fullName>
    <label>T3 Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>