force-app/main/default/objects/Issue_Tracker__c/fields/T3_Escalation__c.field-meta.xml
<CustomField>
    <fullName>T3_Escalation__c</fullName>
    <label>T3 Escalation</label>
    <type>DateTime</type>
</CustomField>