force-app/main/default/objects/Issue_Tracker__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Team</label>
    <referenceTo>copado__Team__c</referenceTo>
    <relationshipLabel>Issue Tracker</relationshipLabel>
    <relationshipName>Team</relationshipName>
    <type>Lookup</type>
</CustomField>