force-app/main/default/objects/Issue_Tracker__c/fields/User_Story_Impacted__c.field-meta.xml
<CustomField>
    <fullName>User_Story_Impacted__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please provide the associated User Story impacted by the issue.</inlineHelpText>
    <label>User Story Impacted</label>
    <referenceTo>copado__User_Story__c</referenceTo>
    <relationshipLabel>Issue Tracker</relationshipLabel>
    <relationshipName>Issue_Tracker</relationshipName>
    <type>Lookup</type>
</CustomField>