force-app/main/default/objects/Issue_Tracker__c/fields/Work_Hours__c.field-meta.xml
<CustomField>
    <fullName>Work_Hours__c</fullName>
    <formula>IF(
    AND(
        VALUE(MID(TEXT(CreatedDate), 12, 2)) &gt;= 05,
        VALUE(MID(TEXT(CreatedDate), 12, 2)) &lt; 22
    ),
    true,
    false
)</formula>
    <label>Work Hours</label>
    <type>Checkbox</type>
</CustomField>