force-app/main/default/objects/Issue_Tracker__c/recordTypes/Issue_Tracker.recordType-meta.xml
<RecordType>
    <fullName>Issue_Tracker</fullName>
    <active>true</active>
    <label>Issue Tracker</label>
</RecordType>