force-app/main/default/objects/Issue_Tracker__c/recordTypes/Rollback_Request.recordType-meta.xml
<RecordType>
    <fullName>Rollback_Request</fullName>
    <active>true</active>
    <label>Rollback Request</label>
</RecordType>