force-app/main/default/objects/Issue_Tracker__c/validationRules/Check_for_RCA.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_for_RCA</fullName>
    <active>true</active>
    <errorConditionFormula>AND (RecordType.Name = &apos;Issue Tracker&apos;,ISPICKVAL(Status__c, &apos;Resolved&apos;),Root_Cause_Analysis__c = NULL)</errorConditionFormula>
    <errorMessage>Please Update the RCA.</errorMessage>
</ValidationRule>