force-app/main/default/objects/Issue_Tracker__c/validationRules/Check_for_Resolution.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_for_Resolution</fullName>
    <active>true</active>
    <errorConditionFormula>AND (RecordType.Name = &apos;Rollback Request&apos;,ISPICKVAL(Status__c, &apos;Resolved&apos;), Resolution__c = NULL)</errorConditionFormula>
    <errorDisplayField>Resolution__c</errorDisplayField>
    <errorMessage>Please Update the Resolution.</errorMessage>
</ValidationRule>