force-app/main/default/objects/Issue_Tracker__c/validationRules/DevOps_Assignee.validationRule-meta.xml
<ValidationRule>
    <fullName>DevOps_Assignee</fullName>
    <active>true</active>
    <errorConditionFormula>AND (OR(ISPICKVAL(Status__c, &apos;Looking into Issue&apos;),ISPICKVAL(Status__c, &apos;Need Additional Information&apos;), ISPICKVAL(Status__c, &apos;Resolved&apos;), ISPICKVAL(Status__c, &apos;Track in Higher Org&apos;), ISPICKVAL(Status__c, &apos;Closed&apos;) ), DevOps_Engineer__c = NULL)</errorConditionFormula>
    <errorDisplayField>DevOps_Engineer__c</errorDisplayField>
    <errorMessage>Please provide the DevOps Engineer Name</errorMessage>
</ValidationRule>