force-app/main/default/objects/Issue_Tracker__c/validationRules/Other_Information_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Information_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Category__c, &apos;Other&apos;),Other_Information__c = NULL)</errorConditionFormula>
    <errorDisplayField>Other_Information__c</errorDisplayField>
    <errorMessage>Please fill the other category information.</errorMessage>
</ValidationRule>