force-app/main/default/objects/Issue_Tracker__c/validationRules/Prevent_False_User_update.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_False_User_update</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(DevOps_Engineer__c),$User.Id &lt;&gt; DevOps_Engineer__r.Id)</errorConditionFormula>
    <errorDisplayField>DevOps_Engineer__c</errorDisplayField>
    <errorMessage>Please Provide Valid User</errorMessage>
</ValidationRule>