force-app/main/default/objects/Issue_Tracker__c/validationRules/Prevent_P1_Creation.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_P1_Creation</fullName>
    <active>true</active>
    <description>This is to prevent users from creating P1 Tickets</description>
    <errorConditionFormula>AND(ispickval(Priority__c,&apos;P1&apos;),  $Profile.Name &lt;&gt; &apos;System Administrator&apos;)</errorConditionFormula>
    <errorDisplayField>Priority__c</errorDisplayField>
    <errorMessage>Please Log a P2 ticket and Escalate if the issue needs to be upgraded to P1.</errorMessage>
</ValidationRule>