force-app/main/default/objects/Issue_Tracker__c/validationRules/Prevent_Status_Downgrade.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Status_Downgrade</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(Status__c),
    CASE(
        PRIORVALUE(Status__c),
        &quot;New&quot;, 1,
        &quot;Looking into Issue&quot;, 2,
        &quot;Need Additional Information&quot;, 3,
								&quot;Escalated&quot;, 4,
        &quot;Resolved&quot;, 5,
        &quot;Track in Higher Org&quot;, 6,
        &quot;Closed&quot;, 7,
        0
    ) &gt;= CASE(
        Status__c,
        &quot;New&quot;, 1,
        &quot;Looking into Issue&quot;, 2,
        &quot;Need Additional Information&quot;, 3,
        &quot;Escalated&quot;, 4,
        &quot;Resolved&quot;, 5,
        &quot;Track in Higher Org&quot;, 6,
        &quot;Closed&quot;, 7,
        0
    )
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Please update the status properly.</errorMessage>
</ValidationRule>