force-app/main/default/objects/Issue_Tracker__c/validationRules/Status_during_Creation.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_during_Creation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISNEW(),
    NOT(ISPICKVAL(Status__c, &quot;New&quot;))
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Please set the update the status to New for creating a Issue Tracker.</errorMessage>
</ValidationRule>